Updated Test And Test2 to print ARGS